@@ -14,5 +14,5 @@ IGNORE=	USES=desthack does not require args
 .  endif
 
 GNU_CONFIGURE_PREFIX=	\$${${DESTDIRNAME}}${PREFIX}
-GNU_CONFIGURE_MANPREFIX=	\$${${DESTDIRNAME}}${MANPREFIX}
+GNU_CONFIGURE_MANPREFIX=	\$${${DESTDIRNAME}}${PREFIX}/share
 .endif
