@@ -100,7 +100,7 @@ KDE_PLASMA5_VERSION?=		5.27.10
 KDE_PLASMA5_BRANCH?=		stable
 
 # Next KDE Plasma desktop
-KDE_PLASMA6_VERSION?=		5.91.0
+KDE_PLASMA6_VERSION?=		5.92.0
 KDE_PLASMA6_BRANCH?=		unstable
 
 # Current KDE frameworks.
@@ -108,7 +108,7 @@ KDE_FRAMEWORKS5_VERSION?=	5.113.0
 KDE_FRAMEWORKS5_BRANCH?=	stable
 
 # Next KDE Frameworks (Qt6 based)
-KDE_FRAMEWORKS6_VERSION?=	5.247.0
+KDE_FRAMEWORKS6_VERSION?=	5.248.0
 KDE_FRAMEWORKS6_BRANCH?=	unstable
 
 # Current KDE applications.
@@ -249,8 +249,10 @@ CMAKE_ARGS+=	-DCMAKE_MODULE_PATH="${LOCALBASE};${KDE_PREFIX}" \
 		-DKDE_INSTALL_USE_QT_SYS_PATHS:BOOL=true
 
 # Set man-page installation prefix.
-CMAKE_ARGS+=	-DKDE_INSTALL_MANDIR:PATH="${KDE_PREFIX}/man" \
-		-DMAN_INSTALL_DIR:PATH="${KDE_PREFIX}/man"
+# TODO: Remove the KDE_MAN_PREFIX knob once all kde ports are switched to use share/man
+KDE_MAN_PREFIX?=	${KDE_PREFIX}/man
+CMAKE_ARGS+=	-DKDE_INSTALL_MANDIR:PATH="${KDE_MAN_PREFIX}" \
+		-DMAN_INSTALL_DIR:PATH="${KDE_MAN_PREFIX}"
 
 # Disable autotests unless TEST_TARGET is defined.
 .    if !defined(TEST_TARGET)
@@ -793,7 +795,7 @@ kde-xdg-desktop-portal-kde_PORT=	deskutils/plasma${_KDE_VERSION}-xdg-desktop-por
 kde-xdg-desktop-portal-kde_PATH=	${KDE_PREFIX}/lib/libexec/xdg-desktop-portal-kde
 
 kde-plasma5support_PORT=	devel/plasma${_KDE_VERSION}-plasma5support
-kde-plasma5support_LIB=		libKF${_KDE_VERSION}Plasma5Support.so
+kde-plasma5support_LIB=		libPlasma5Support.so
 
 kde-kirigami-addons_PORT5=	x11-toolkits/kirigami-addons
 kde-kirigami-addons_PORT6=	x11-toolkits/kirigami-addons-devel
