@@ -8,9 +8,7 @@
 
 .if !defined(_INCLUDE_USES_UIDFIX_MK)
 _INCLUDE_USES_UIDFIX_MK=	yes
-.  if !defined(GID)
-GID!=	id -g
-.  endif
+GID?=	${.MAKE.GID}
 .  if ${UID} != 0
 MAKE_ENV+=	BINOWN=${UID} SHAREOWN=${UID} CONFOWN=${UID} LIBOWN=${UID}
 MAKE_ENV+=	BINGRP=${GID} SHAREGRP=${GID} CONFGRP=${GID} LIBGRP=${GID}
